--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 num_enum = "0.7.0"
+protobuf = "3.2.0"
 rapier2d = "0.17.2"
+
+[build-dependencies]
+protoc-rust = "2.28.0"
