--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 num_enum = "0.7.0"
-protobuf = "3.2.0"
+protobuf = "2"
 rapier2d = "0.17.2"
+tokio = { version = "1.32.0", features = ["full"] }
 
 [build-dependencies]
 protoc-rust = "2.28.0"
