--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+byteorder = "1.4.3"
 num_enum = "0.7.0"
 protobuf = "2"
 rapier2d = "0.17.2"
-tokio = { version = "1.32.0", features = ["full"] }
 
 [build-dependencies]
 protoc-rust = "2.28.0"
